# Palette

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  make  makefile  vcpkg.json
backend/google_tests/: CMakeLists.txt
backend/google_tests/unit_tests/explorer/: AbstractHandlerTest.cpp  DirectoryHandlerTest.cpp
backend/include/: DynamicTagger.h  FileMover.h  FileSearcher.h  FileTagger.h  PathVariables.h  TaggingRulesSetup.h  TrayIcon.h
backend/include/API/: Controller.h  ExplorerAPI.h  SearchAPI.h  TaggerAPI.h  WhitelistMiddleware.h
backend/include/database/: Database.h
backend/include/database/repository/: desc.txt
backend/include/explorer/: class_info.txt
backend/src/components/: FileMover.cpp  FileSearcher.cpp  FileTagger.cpp  TrayIcon.cpp
backend/src/components/explorer/: DirectoryHandler.cpp  DynamicTagger.cpp  Handler.cpp
backend/src/main/: Daemon.cpp
env/: palette.db
frontend/PaletteUI/: App.xaml  App.xaml.cs  Install-Palette.bat  Launch-Palette.bat  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PaletteLauncherReadMe.md  PaletteUI.WinUI.csproj  PaletteUI.WinUI_TemporaryKey.pfx  PaletteUI.csproj  PaletteUI.sln  PaletteUI.slnx  app.manifest
frontend/PaletteUI.Core/: Connection.cs  PaletteUI.Core.csproj
frontend/PaletteUI.Core/Repositories/: FileRepository.cs  TagRepository.cs
frontend/PaletteUI.Core/ViewModels/: DirectoryViewModel.cs  FileViewModel.cs
frontend/PaletteUI/AppPackages/: PaletteUI.WinUI_x64.appinstaller  PaletteUI.WinUI_x86.appinstaller  index.html
frontend/PaletteUI/AppPackages/PaletteUI.WinUI_1.0.0.0_x64_Test/: PaletteUI.WinUI_1.0.0.0_x64.appxsym
frontend/PaletteUI/AppPackages/PaletteUI.WinUI_1.0.0.0_x86_Test/: PaletteUI.WinUI_1.0.0.0_x86.appxsym  PaletteUI.WinUI_1.0.0.0_x86.cer
frontend/PaletteUI/BundleArtifacts/: PaletteUI.WinUI_x64.appinstaller.xml  PaletteUI.WinUI_x86.appinstaller.xml
frontend/PaletteUI/Properties/: launchSettings.json
frontend/PaletteUI/Styles/: NavigationStyles.xaml
frontend/PaletteUI/Views/FileRecyclerView/: RecyclerView.xaml  RecyclerView.xaml.cs
frontend/PaletteUI/Views/RootContent/: MainPage.xaml  MainPage.xaml.cs
frontend/PaletteUI/Views/RootContent/MainContent/: SideBarNavigation.xaml  SideBarNavigation.xaml.cs  SplitView.xaml  SplitView.xaml.cs
frontend/PaletteUI/Views/RootContent/TopBarNavigation/: TopBarNavigation.xaml  TopBarNavigation.xaml.cs
google_tests/: CMakeLists.txt
google_tests/unit_tests/: FHandlerTest.cpp
google_tests/unit_tests/explorer/: AbstractHandlerTest.cpp  DirectoryHandlerTest.cpp  ExplorerTest.h  FileHandlerTest.cpp
include/: DirectoryNav.h  FileHandler.h  FileMover.h  FileTagger.h  Shell.h  shell.h
include/database/domain/: desc.txt
include/explorer/: DirectoryHandler.h  FileHandler.h  Handler.h
launcher/PaletteLauncher/: PaletteLauncher.csproj  Program.cs
src/: FileMover.cpp  FileTagger.cpp
src/components/: FileHandler.cpp  FileMover.cpp  FileTagger.cpp
src/components/explorer/: DirectoryHandler.cpp  FileHandler.cpp  Handler.cpp
src/main/: Daemon.cpp  Shell.cpp  shell.cpp
